# regjeringen

./: .gitignore  AGENT.md  CODEX_CONTINUATION.md  README.md  devel_plan.md  pyproject.toml
.github/workflows/: ci.yml
SKILLS/regjeringen-ingestion/: SKILL.md
SKILLS/regjeringen-ingestion/agents/: openai.yaml
SKILLS/regjeringen-ingestion/references/: mvp-checklist.md
reports/: source-audit-2026-07-03.json  source-audit-2026-07-03.md
schema/postgres/: 001_metadata.sql
src/sculpin_regjeringen/: __init__.py  cli.py  config.py  errors.py  ingest_hearings.py
src/sculpin_regjeringen/agents/: __init__.py  tools.py
src/sculpin_regjeringen/crawler/: __init__.py  attachment_downloader.py  detail_audit.py  discovery.py  fetcher.py  hearing.py  input_process.py  nou.py  proposition.py  robots.py  source_audit.py  storting_message.py
src/sculpin_regjeringen/extractors/: __init__.py  concepts.py  docx.py  pdf.py  references.py
src/sculpin_regjeringen/graph/: __init__.py  mapping.py  sparql_templates.py
src/sculpin_regjeringen/models/: __init__.py  canonical.py  graph.py  provenance.py  urls.py
src/sculpin_regjeringen/parsers/: __init__.py  attachment_parser.py  base.py  hearing_parser.py  html_common.py  nou_parser.py  proposition_parser.py  storting_message_parser.py
src/sculpin_regjeringen/storage/: __init__.py  artifacts.py  (+5 more)
tests/unit/: test_attachment_downloader.py  test_hearing_batch_ingestion.py  test_hearing_parser.py  test_postgres_metadata_store.py  test_postgres_schema.py  test_scaffold.py  test_source_scraper.py  test_storage_and_graph.py
(+14 files in other folders)
