[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sculpin-regjeringen-ingest"
version = "0.1.0"
description = "Sculpin ingestion and knowledge organization for regjeringen.no documents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiolimiter>=1.1",
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "pydantic>=2.8",
  "python-dateutil>=2.9",
  "rdflib>=7.0",
  "selectolax>=0.3",
  "tenacity>=8.5",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]
attachments = [
  "mammoth>=1.8",
  "pdfplumber>=0.11",
  "pymupdf>=1.24",
  "python-docx>=1.1",
]
storage = [
  "boto3>=1.34",
  "duckdb>=1.0",
  "psycopg[binary]>=3.2",
]

[project.scripts]
sculpin-regjeringen = "sculpin_regjeringen.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/sculpin_regjeringen"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["sculpin_regjeringen"]
